--- a/Frontend/src/Components/Products/products.module.css
+++ b/Frontend/src/Components/Products/products.module.css
@@ -18,17 +18,27 @@
 @media (max-width: 768px) {
   .cardsContainer {
     grid-template-columns: 1fr;
+    padding: 0 2rem 0 2rem;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1023px) {
+  .cardsContainer {
+    grid-template-columns: repeat(2, 1fr);
+    padding: 0 4rem;
   }
 }
 
 @media (min-width: 1024px) {
   .cardsContainer {
     grid-template-columns: repeat(3, 1fr);
+    padding: 0 8rem 0 8rem;
   }
 }
 
 @media (min-width: 1440px) {
   .cardsContainer {
     grid-template-columns: repeat(4, 1fr);
+    padding: 0 8rem 0 8rem;
   }
 }
